# Projet5-ML-deployment-for-Futurisys-

./: .gitignore  P4.ipynb  README.md  app_config.yaml  data.json  model.pkl  prediction_service.py  pyproject.toml  requirements.txt  test_prediction_service.py
.github/workflows/: deploy.yml  tests.yml
.ipynb_checkpoints/: P4-checkpoint.ipynb  requirements-checkpoint.txt
app/: database.py  employee_models.py  main.py  prediction_service.py  train_model.py
app/.ipynb_checkpoints/: main-checkpoint.py
app/model/: model.pkl
data/: df_joint.csv
docs/: schema_uml.md
hf-env-py/: pyvenv.cfg
hf-env-py/Scripts/: activate  activate.bat
tests/: example_prediction.json  test_predict.py
