[project]
name = "ml-futurisys"
version = "0.1.0"
description = ""
authors = [
    {name = "masala-hadziavdic",email = "amela188@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
